Fix z-index affix

--- a/assets/sass/header/_main-menu.scss
+++ b/assets/sass/header/_main-menu.scss
@@ -127,7 +127,7 @@ a:active {
 		}
 
 		&.affix {
-			z-index: 99;
+			z-index: 9999;
 			position: fixed;
 			width: 100%;
 			padding-top: 10px;
